--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ p{
     .qr-container{
         width: 300px;
         height: 65%;
+        margin-top: 6%;
     }
     img{
         width: 300px;
